# sklearn-user-guide

./: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  6.py  README.md  binary_1.ipynb  binary_1.py  pyproject.toml
conf/: bike.yaml  test.yaml
src/binary/: 1.py  2.py  automl_flaml.py  lightgbm_optuna.py  lr_optuna.py  multirun.py  utils.py
sweep/: config.yaml
